--- a/telsy/monitor/templates/information.html
+++ b/telsy/monitor/templates/information.html
@@ -54,17 +54,19 @@
 														<div class="col mt-2 ml-3">
 															{% if localVersion and localDate %}
 																<h4 class="row">Versión:
-																	<p class="d-inline ml-1">{{localVersion}}</p>
+																	<code class="d-inline ml-1">{{localVersion}}</code>
 																</h4>
 																<h4 class="row">Fecha:
-																	<p class="d-inline ml-1">{{localDate}}</p>
+																	<code class="d-inline ml-1">{{localDate}}</code>
 																</h4>
 															{% endif %}
-															{% if updatable %}
-																<h4 class="row mt-3">Existe una nueva versión:
-																	<p class="d-inline mx-1">{{remoteVersion}}</p>
-																	con fecha:
-																	<p class="d-inline ml-1">{{remoteDate}}</p>
+															{% if not updatable %}
+																<h4 class="row mt-2">Existe una nueva versión:</h4>
+																<h4 class="row">Versión:
+																	<code class="d-inline ml-1">{{remoteVersion}}</code>
+																</h4>
+																<h4 class="row mb-2">Fecha:
+																	<code class="d-inline ml-1">{{remoteDate}}</code>
 																</h4>
 																<div class="row d-flex justify-content-center">
 																	<a href="/update/" class="button rectangle d-flex align-items-center" style="background-color:#722ea2;">
