Information template updatable

--- a/telsy/monitor/templates/information.html
+++ b/telsy/monitor/templates/information.html
@@ -60,7 +60,7 @@
 																	<code class="d-inline ml-1">{{localDate}}</code>
 																</h4>
 															{% endif %}
-															{% if not updatable %}
+															{% if updatable %}
 																<h4 class="row mt-2">Existe una nueva versión:</h4>
 																<h4 class="row">Versión:
 																	<code class="d-inline ml-1">{{remoteVersion}}</code>
