--- a/telsy/monitor/templates/home.html
+++ b/telsy/monitor/templates/home.html
@@ -31,7 +31,9 @@
 									<h1 id="day-week"></h1>
 								</div>
 								<div class="col-fifth navigation d-flex justify-content-end">
-									<p id="battery"></p>
+									<div class="mr-2">
+										<p id="battery"></p>
+									</div>
 									<a href="#" onclick="thereIsUser()" class="button square s60 gradient-1 margin-right-20">
 										<div class="icon"><img src="{% static 'images/icons/ico-nav.png' %}"></div>
 									</a>
