--- a/telsy/monitor/static/css/style.css
+++ b/telsy/monitor/static/css/style.css
@@ -2122,6 +2122,14 @@ div[data-anim~=base] {
   content: "\f5e7"
 }
 
+.fa-charging-station2{
+  font-family: "Font Awesome 5 Free";
+  font-size: 50px;
+  font-weight: 900;
+  color: var(--color-green);
+  content: "\f5e7"
+}
+
 /*Copia del estilo .row de bootstrap-grid*/
 .row-hidden {
   display: none;
