Live graph data

--- a/telsy/monitor/templates/measure.html
+++ b/telsy/monitor/templates/measure.html
@@ -103,7 +103,7 @@
 													<img src="{% static 'images/icons/ico-pni.png' %}">
 												</div>
 												<div class="content my-auto margin-left-10">
-													<p>Presión Diastólica</p>
+													<p id="diastole-name">Presión Diastólica</p>
 													<h2 class="d-inline" id="diastole">...</h2>
 													<p class="d-inline">&nbsp;mmHg</p>
 												</div>
