--- a/telsy/monitor/templates/data.html
+++ b/telsy/monitor/templates/data.html
@@ -183,7 +183,7 @@
 												<p class="d-inline">&nbsp;kg</p>
 												<p class="small txt-grey-dark">
 													<span class="bold-text">Fecha:&nbsp;</span>
-													<span class="record-date">dd/mm/yyyy</span>
+													<span id="weight-date">dd/mm/yyyy</span>
 												</p>
 											</div>
 										</div>
