--- a/telsy/monitor/templates/monitoring.html
+++ b/telsy/monitor/templates/monitoring.html
@@ -64,11 +64,17 @@
 															<a id="info-button" href="#" onclick="infoButton()" class="button square s60 yellow margin-right-20">
 																<div class="icon"><img src="{% static 'images/icons/ico-assistant-info.png' %}"></div>
 															</a>
-															<a href="#" onclick="nextButton()" class="button rectangle r120 green d-flex flex-row  justify-content-between" style="width: 175px;">
+															<a href="#" onclick="nextButton()" class="button rectangle r120 green d-flex flex-row justify-content-between" style="width: 175px;">
 																<p id="next-button" class="label txt-white">Continuar</p>
 																<div class="icon">
 																	<img src="{% static 'images/icons/arrow-right-white.png' %}">
 																</div>
+															</a>
+															<a id="pressure-gauge" href="#" onclick="pressureGauge()" class="visually-hidden button rectangle r120 blue-light d-flex flex-row justify-content-between ms-3" style="width: 160px;">
+																<div class="icon">
+																	<img src="{% static 'images/icons/ico-pressure-gauge.png' %}">
+																</div>
+																<p id="next-button" class="label txt-white">Manómetro</p>
 															</a>
 														</div>
 													</div>
