--- a/telsy/monitor/templates/measure.html
+++ b/telsy/monitor/templates/measure.html
@@ -29,7 +29,7 @@
 						<div class="container-fluid p-0">
 							<div class="row header no-gutters p-0">
 								<div class="col title d-flex flex-row">
-									<div class="icon my-auto margin-right-10"><img src="{% static 'images/icons/ico-monitoring.png' %}"></div>
+									<div class="icon my-auto margin-right-10"><img id="measure-ico" src="{% static 'images/icons/ico-monitoring.png' %}"></div>
 									<h1 id="measure-title">Monitoreando...</h1>
 								</div>
 								<div class="col-fifth navigation d-flex justify-content-end">
