--- a/telsy/monitor/templates/medicaments.html
+++ b/telsy/monitor/templates/medicaments.html
@@ -40,18 +40,19 @@
 									</a>
 								</div>
 							</div>
-							<br><br><br><br><br>
 							<div class="row main-content no-gutters p-0">
-								<h1 id="medicament-title">Nombre del medicamento</h1>
-								<div class="col-12 d-flex justify-content-center">
-									<a href="/home/" class="button square s110 gradient-1 margin-right-20" style="width: 22%;">
-										<div class="icon"><img src="{% static 'images/icons/equis-red.png'%}"></div>
-										<h2 class="label txt-red">Cancelar</h2>
-									</a>
-									<a href="#" onclick="acceptButton()" class="button square s110 green" style="width: 22%;">
-										<div class="icon"><img src="{% static 'images/icons/ico-ok.png'%}"></div>
-										<h2 class="label txt-white">Aceptar</h2>
-									</a>
+								<div class="my-auto">
+									<h1 id="medicament-title">Nombre del medicamento</h1>
+									<div class="col-12 d-flex justify-content-center mt-5">
+										<a href="/home/" class="button square s110 gradient-1 margin-right-20" style="width: 25%;">
+											<div class="icon"><img src="{% static 'images/icons/equis-red.png'%}"></div>
+											<h2 class="label txt-red">Cancelar</h2>
+										</a>
+										<a href="#" onclick="acceptButton()" class="button square s110 green" style="width: 25%;">
+											<div class="icon"><img src="{% static 'images/icons/ico-ok.png'%}"></div>
+											<h2 class="label txt-white">Aceptar</h2>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
